# NeuroVoice

./: .gitignore  LICENSE  README.md  deps.txt  pyproject.toml  requirements.txt
alltalk_tts/trainer_alltalk/: trainer.py
configs/train/: default.yaml  divertito.yaml  shtefanov.yaml
models/VAD/: vad_processer.py
models/tts/: genvoice.py  xtts_finetuner.py  xtts_inference.py
notebooks/: xtts-train_KAGGLE.ipynb  xtts_train.ipynb
pipelines/: train.py
transcriber/: asr_transcriber.py
utils/: auxiliaries.py  create_config.py  long_text_splitter.py  quantizer.py
